[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/musicTester.gd" type="Script" id=1]
[ext_resource path="res://scenes/battleMode/MusicHandler.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/battleMode/Bullet.tscn" type="PackedScene" id=3]

[node name="musicTester" type="Node2D"]
script = ExtResource( 1 )
bullet = ExtResource( 3 )

[node name="MusicHandler" parent="." instance=ExtResource( 2 )]

[node name="reverseTimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="stopTimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="speedTimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="slowTimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="melodyNote" from="MusicHandler" to="." method="attack"]
[connection signal="timeout" from="reverseTimeTimer" to="." method="_on_reverseTimeTimer_timeout"]
[connection signal="timeout" from="stopTimeTimer" to="." method="_on_stopTimeTimer_timeout"]
[connection signal="timeout" from="speedTimeTimer" to="." method="_on_speedTimeTimer_timeout"]
